Committing UI prototype

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,4 @@
-<h3>Home</h3>
-<% @users.each do |user| %>
-  <p>User: <%=link_to user.name, user %></p>
-<% end %>
+<div class='hero-unit'>
+<h1> Visual Cloud </h1>
+<p> Why don't you log in? </p>
+</div>
