--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -9,17 +9,24 @@
  * compiled file, but it's generally better to create a new file per style scope.
  *
  *= require_self
+ *= require jquery.ui.all
  *= require_tree .
 */
 
-.content {
-  background-color: #eee;
-  padding: 20px;
-  margin: 0 -20px; /* negative indent the amount of the padding to maintain the grid system */
-  -webkit-border-radius: 0 0 6px 6px;
-  -moz-border-radius: 0 0 6px 6px;
-  border-radius: 0 0 6px 6px;
-  -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.15);
-  -moz-box-shadow: 0 1px 2px rgba(0,0,0,.15);
-  box-shadow: 0 1px 2px rgba(0,0,0,.15);
+div.graph-area {
+  background-image:image-url('tiny_grid.png');
+  height: 400px;
+}
+
+div.graph-droppables-dock {
+  background-color: white;
+  height: 400px;
+}
+
+.ubuntu-ec2-element {
+  background-image:image-url('icons/ubuntu.png');
+  background-repeat: no-repeat;
+  background-size:70px 70px;
+  height: 70px;
+  width: 70px;
 }
