--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
     <%= csrf_meta_tags %>
     <%= yield(:head) %>
   </head>
-  <body>
+  <body data-offset="10" data-target=".navbar" data-spy="scroll">
     <header class="navbar navbar-fixed-top">
       <nav class="navbar-inner">
         <div class="container">
