Non obstrusive widget layout for different resource types

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -18,11 +18,12 @@ div.graph-area {
   height: 400px;
 }
 
-div.graph-droppables-dock {
+div.graph-draggables-dock {
   background-color: white;
   height: 400px;
 }
 
+/*
 .ubuntu-ec2-element {
   background-image:image-url('icons/ubuntu.png');
   background-repeat: no-repeat;
@@ -30,3 +31,4 @@ div.graph-droppables-dock {
   height: 70px;
   width: 70px;
 }
+*/
