--- a/app/views/graphs/new.html.erb
+++ b/app/views/graphs/new.html.erb
@@ -1,9 +1,9 @@
 <%= render 'toolbar' %>
 <div class="row">
-  <%= render 'graph_droppables' %>
+  <%= render 'graph_draggables', resource_types: @resource_types %>
   <%= render 'graph_area' %>
   <%= render 'dialogs' %>
 </div>
-<script>
-  bind_elements();
+<script type="text/javascript">
+  prepare_stage();
 </script>
