--- a/app/views/graphs/_dialogs.html.erb
+++ b/app/views/graphs/_dialogs.html.erb
@@ -1,7 +1,24 @@
-<div id="ubuntuec2-configuration" class="modal hide fade in" style="display: none; ">  
+<!-- EC2 resource added -->
+<div id="ec2-configuration" class="modal hide fade in" style="display: none; ">  
   <div class="modal-header">  
     <a class="close" data-dismiss="modal">×</a>  
-    <h3>Ubuntu EC2</h3>  
+    <h3>You have added an EC2 resource</h3>  
+  </div>  
+  <div class="modal-body">  
+    <h4>Text in a modal</h4>  
+    <p>You can add some text here.</p>                
+  </div>  
+  <div class="modal-footer">  
+    <a href="#" class="btn btn-success">Create</a>  
+    <a href="#" class="btn" data-dismiss="modal">Close</a>  
+  </div>  
+</div>  
+
+<!-- RDS resource added -->
+<div id="rds-configuration" class="modal hide fade in" style="display: none; ">  
+  <div class="modal-header">  
+    <a class="close" data-dismiss="modal">×</a>  
+    <h3>You have added an RDS resource</h3>  
   </div>  
   <div class="modal-body">  
     <h4>Text in a modal</h4>  
