--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -23,6 +23,10 @@ div.graph-draggables-dock {
   height: 400px;
 }
 
+.instance {
+  display: inline-block;
+}
+
 /*
 .ubuntu-ec2-element {
   background-image:image-url('icons/ubuntu.png');
