--- a/app/views/graphs/_resource_script_tag.html.erb
+++ b/app/views/graphs/_resource_script_tag.html.erb
@@ -1,7 +1,7 @@
 <script type="text/javascript">
   $('#resource-type-<%= resource_type.id %>').resourceElement({
     name: '<%= resource_type.name %>' ,
-    largeIcon: '<%= resource_type.large_icon %>' ,
+    instanceHtml: "<%= escape_javascript get_instance_template_for_stage(resource_type) %>" ,
     resourceTypeId: '<%= resource_type.id %>'
   });
 </script>
