--- a/app/views/graphs/_dialogs.html.erb
+++ b/app/views/graphs/_dialogs.html.erb
@@ -1,20 +1,25 @@
 <!-- EC2 resource added -->
-<div id="ec2-configuration" class="modal hide fade in" style="display: none; ">  
+<div id="ec2-configuration" class="modal hide fade in instance-config" style="display: none; ">  
   <div class="modal-header">  
     <a class="close" data-dismiss="modal">×</a>  
-    <h3>You have added an EC2 resource</h3>  
+    <h3>EC2 instance configuration</h3>  
   </div>  
   <div class="modal-body">  
-    <h4>Text in a modal</h4>  
-    <p>You can add some text here.</p>                
+    <div id="ec2-config-error-messages"></div>
+    <%= simple_form_for Instance.new, url: create_ec2_path  , remote: true, html: { id: 'ec2-config-frm'} do |f|%>
+      <%= f.input :label %>
+      <%= f.hidden_field(:xpos, id: 'ec2_xpos')%>
+      <%= f.hidden_field(:ypos, id: 'ec2_ypos')%>
   </div>  
   <div class="modal-footer">  
-    <a href="#" class="btn btn-success">Create</a>  
+    <%= f.button :submit, 'Add instance', class: "btn btn-success instance-config-submit" %>
+    <!-- <a href="#" class="btn btn-success instance-config-submit">Create</a>  -->
     <a href="#" class="btn" data-dismiss="modal">Close</a>  
   </div>  
+    <% end %>
 </div>  
 
-<!-- RDS resource added -->
+<!-- RDS resource added Needs to be changed-->
 <div id="rds-configuration" class="modal hide fade in" style="display: none; ">  
   <div class="modal-header">  
     <a class="close" data-dismiss="modal">×</a>  
@@ -25,7 +30,7 @@
     <p>You can add some text here.</p>                
   </div>  
   <div class="modal-footer">  
-    <a href="#" class="btn btn-success">Create</a>  
+    <a href="#" class="btn btn-success instance-config-submit">Create</a>  
     <a href="#" class="btn" data-dismiss="modal">Close</a>  
   </div>  
 </div>  
