--- a/app/assets/javascripts/default.js.erb
+++ b/app/assets/javascripts/default.js.erb
@@ -3,28 +3,7 @@ function prepare_stage(){
   $('.graph-area').graphArea();
 };
 
-function addInstanceCloneToGraph(self, params){
-  var graphArea = params.droppable ;
-  var draggedItem = params.args ;
-  var topOffset = draggedItem.position.top - graphArea.position().top ;
-  var leftOffset = draggedItem.position.left - graphArea.position().left ;
-  self.instanceCount ++ ;
-  var newElement = $('<div id="ec2-instance-'+ self.instanceCount + '" class="instance" ></div>');
-  newElement.appendTo(graphArea);
-
-  newElement.html(self.options.instanceHtml);
-  newElement.position({
-    my: 'left top',
-    at: 'left top',
-    of: graphArea,
-    collision: 'none',
-    offset: leftOffset + ' ' + topOffset 
-  });
-  return newElement ;
-};
-
-//Refactoring above function
-function addInstanceCloneToGraphRefactored(position, divId){
+function addInstanceCloneToGraph(position, divId){
   var graphArea = $('.graph-area') ;
   var topOffset = position.top - graphArea.position().top ;
   var leftOffset = position.left - graphArea.position().left ;
@@ -41,13 +20,7 @@ function addInstanceCloneToGraphRefactored(position, divId){
   return newElement ;
 };
 
-function showConfigurationForm(dialogId, instanceElement){
-  var dialog = $('#'+dialogId);
-  dialog.data('instanceId', instanceElement[0].id);
-  dialog.modal('show');
-};
-
-function showConfigurationFormRefactored(dialogId, droppedPosition){
+function showConfigurationForm(dialogId, droppedPosition){
   var dialog = $('#'+dialogId);
   dialog.data('xpos', droppedPosition.left);
   dialog.data('ypos', droppedPosition.top);
