--- a/app/views/instances/create_ec2.js.erb
+++ b/app/views/instances/create_ec2.js.erb
@@ -1,5 +1,5 @@
-<% if @instance.valid? %>
-  var newInstance = addInstanceCloneToGraphRefactored({ left: <%= @instance.xpos %>, top: <%= @instance.ypos %> }, 'instance-<%=@instance.id%>');
+<% if flash.now[:error].nil? %>
+  var newInstance = addInstanceCloneToGraph({ left: <%= @instance.xpos %>, top: <%= @instance.ypos %> }, 'instance-<%=@instance.id%>');
   newInstance.html('<%= escape_javascript(render 'ec2_template' , resource_type: @resource_type, instance: @instance)%>')
   newInstance.draggable({containment: 'parent' });
   $('#ec2-configuration').modal('hide');
