--- a/app/views/graphs/_graph_draggables.html.erb
+++ b/app/views/graphs/_graph_draggables.html.erb
@@ -1,6 +1,6 @@
-<div class="well span2 graph-draggables-dock">
+<div class="well span2 graph-draggables-dock" style="padding:18px;">
   <div id="accordion">
-    <h3><a href="#">Recources</a></h3>
+    <h3><a href="#">Resources</a></h3>
     <div>
       <% resource_types.each do |resource_type| %>
 
