--- a/app/views/graphs/new.html.erb
+++ b/app/views/graphs/new.html.erb
@@ -3,6 +3,7 @@
   <%= render 'graph_draggables', resource_types: @resource_types %>
   <%= render 'graph_area' %>
   <%= render 'dialogs' %>
+  <%= render 'instance_templates', resource_types: @resource_types %>
 </div>
 <script type="text/javascript">
   prepare_stage();
