--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,7 @@
             <div class="span12">
               <%= render 'layouts/messages' %>
               <%= yield %>
+              <%= render 'layouts/loading' %>
             </div>
           </div>
           <footer>
