--- a/app/views/graphs/_dialogs.html.erb
+++ b/app/views/graphs/_dialogs.html.erb
@@ -1,3 +1,21 @@
+<!-- Save Graph  -->
+<div id="graph-save-modal" class="modal hide fade in" style="display: none; ">  
+  <div class="modal-header">  
+    <a class="close" data-dismiss="modal">×</a>  
+    <h3>Save Graph</h3>  
+  </div>  
+  <div class="modal-body">  
+    <div id="graph-save-error-messages"></div>
+    <%= simple_form_for Graph.new, url: '/graphs'  , remote: true, html: { id: 'graph-save-frm'} do |f|%>
+      <%= f.input :name, input_html: { id: 'graph-name'} %>
+  </div>  
+  <div class="modal-footer">  
+    <%= f.button :submit, 'Save graph', class: "btn btn-success graph-save-submit" %>
+    <a href="#" class="btn" data-dismiss="modal">Close</a>  
+  </div>  
+    <% end %>
+</div>  
+
 <!-- EC2 resource added -->
 <div id="ec2-configuration" class="modal hide fade in instance-config" style="display: none; ">  
   <div class="modal-header">  
@@ -6,9 +24,9 @@
   </div>  
   <div class="modal-body">  
     <div id="ec2-config-error-messages"></div>
-    <%= simple_form_for Instance.new, url: create_ec2_path  , remote: true, html: { id: 'ec2-config-frm'} do |f|%>
-      <%= f.input :label %>
-      <%= f.input :ami_id, label: 'AMI', collection: Ami.get_select_collection %>
+    <%= simple_form_for Instance.new, url: '', html: { id: 'ec2-config-frm'} do |f|%>
+      <%= f.input :label, input_html: { id: 'ec2_label'} %>
+      <%= f.input :ami_id, label: 'AMI', collection: Ami.get_select_collection, input_html: {id: 'ec2_ami_id'} %>
       <%= f.hidden_field(:xpos, id: 'ec2_xpos')%>
       <%= f.hidden_field(:ypos, id: 'ec2_ypos')%>
   </div>  
@@ -28,7 +46,7 @@
   <div class="modal-body">  
     <div id="rds-config-error-messages"></div>
     <%= simple_form_for Instance.new, url: create_rds_path  , remote: true, html: { id: 'rds-config-frm'} do |f|%>
-      <%= f.input :label %>
+      <%= f.input :label, input_html: { id: 'rds_label'} %>
       <%= f.hidden_field(:xpos, id: 'rds_xpos')%>
       <%= f.hidden_field(:ypos, id: 'rds_ypos')%>
   </div>
