--- a/app/assets/javascripts/graph.js.erb
+++ b/app/assets/javascripts/graph.js.erb
@@ -2,9 +2,10 @@ $(document).ready(function(){
   //On click event for "Save" button on graph toolbar
   $('#graph-save').click(function(){
     $('#graph-save-modal').modal('show');
-    console.log('clicked!');
-    //$('.graph-area').graphArea("save");
-    //showLoading();
+  });
+
+  //On click event for "Save" button on graph toolbar during edit
+  $('#graph-update').click(function(){
   });
 
   //On click event for "Save graph" in Save Graph modal
