--- a/app/views/graphs/_dialogs.html.erb
+++ b/app/views/graphs/_dialogs.html.erb
@@ -31,7 +31,7 @@
       <%= f.hidden_field(:ypos, id: 'ec2_ypos')%>
   </div>  
   <div class="modal-footer">  
-    <%= f.button :submit, 'Add instance', class: "btn btn-success instance-config-submit" %>
+    <%= f.button :submit, 'Apply', class: "btn btn-success instance-config-submit" %>
     <a href="#" class="btn" data-dismiss="modal">Close</a>  
   </div>  
     <% end %>
@@ -51,7 +51,7 @@
       <%= f.hidden_field(:ypos, id: 'rds_ypos')%>
   </div>
   <div class="modal-footer">
-    <%= f.button :submit, 'Add instance', class: "btn btn-success instance-config-submit" %>
+    <%= f.button :submit, 'Apply', class: "btn btn-success instance-config-submit" %>
     <a href="#" class="btn" data-dismiss="modal">Close</a>  
   </div>
   <% end %>
