Save and edit functionality for graphs

--- a/app/assets/javascripts/default.js.erb
+++ b/app/assets/javascripts/default.js.erb
@@ -1,4 +1,4 @@
-function prepare_stage(){
+function prepareStage(){
   $( "#accordion" ).accordion({ fillSpace: true, collapsible: true });
   $('.graph-area').graphArea();
 };
