--- a/app/views/graphs/_edit_toolbar.html.erb
+++ b/app/views/graphs/_edit_toolbar.html.erb
@@ -1,6 +1,6 @@
 <div class="navbar navbar-inner">
   <ul class="nav nav-pills">
-    <li><a id="graph-update" href="javascript:void(0)">Save</a></li>
+    <li><a id="graph-update" data-graph-id="<%=@graph.id%>" href="javascript:void(0)">Save</a></li>
     <li><a>Export</a></li>
     <li><a>Import</a></li>
   </ul> 
