--- a/app/views/graphs/new.html.erb
+++ b/app/views/graphs/new.html.erb
@@ -6,5 +6,5 @@
   <%= render 'instance_templates', resource_types: @resource_types %>
 </div>
 <script type="text/javascript">
-  prepare_stage();
+  prepareStage();
 </script>
