--- a/app/views/graphs/edit.html.erb
+++ b/app/views/graphs/edit.html.erb
@@ -6,5 +6,14 @@
   <%= render 'instance_templates', resource_types: @resource_types %>
 </div>
 <script type="text/javascript">
-  prepare_stage();
+  prepareStage();
+  <% @graph.instances.each do |instance| %>
+    var label = '<%= instance.label %>';
+    var resourceType = '<%= instance.resource_type.name %>';
+    var xpos = <%= instance.xpos %> ;
+    var ypos = <%= instance.ypos %> ;
+    var amiId = <%= instance.ami_id.nil? ? 'null' : instance.ami_id %>;
+    var newInstance = addInstanceCloneToGraph({ left: xpos, top: ypos });
+    newInstance.instance({xpos: xpos, ypos: ypos, label: label, resourceType: resourceType, amiId: amiId});
+  <% end %>
 </script>
