1)Added basic components widget 2)Added model and migration for components 3)Added ELB resource type 4)Added icons for Rails and PHP components

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -27,6 +27,11 @@ div.graph-draggables-dock {
   display: inline-block;
 }
 
+.dockIcon {
+  max-height: 30px;
+  max-width: 30px;
+}
+
 /*
 .ubuntu-ec2-element {
   background-image:image-url('icons/ubuntu.png');
