--- a/app/views/graphs/_graph_draggables.html.erb
+++ b/app/views/graphs/_graph_draggables.html.erb
@@ -4,9 +4,6 @@
     <div>
       <% resource_types.each do |resource_type| %>
 
-        <!-- To add resource specific CSS -->
-        <%= render 'resource_style_tag', resource_type: resource_type %>
-
         <!-- This is the resouce element to which resourceElement widget is bound and added to the resource dock-->
         <div id="resource-type-<%= resource_type.id %>" data-element-type="resource"> 
           <%= image_tag("icons/#{resource_type.small_icon}", size: '30x30')%>
@@ -20,7 +17,18 @@
     </div>
     <h3><a href="#">Components</a></h3>
     <div>
-      <div id="component-1">Rails</div>
+      <% Constants::COMPONENTS.each do |component| %>
+
+        <!-- This is the component to which component widget is bound and added to the component dock-->
+        <div id="component-<%= component.id %>" data-element-type="component"> 
+          <%= image_tag("icons/#{component.small_icon}", class: "dockIcon")%>
+          <%= component.name %> 
+        </div>
+        </br>
+
+        <!-- To add component specific JS. This is where the component is bound to the widget -->
+        <%= render 'component_script_tag', component: component %>
+      <% end %>
     </div>
   </div>
 </div>
