--- a/app/views/home/dashboard.html.erb
+++ b/app/views/home/dashboard.html.erb
@@ -4,4 +4,7 @@
   <p>
     <%= link_to 'Try it!', new_graph_path , class: "btn btn-primary btn-large" %>
   </p>
+  <p>
+    <%= link_to 'All Graphs', graphs_path , class: "btn btn-primary btn-large" %>
+  </p>
 </div>
