Flash message fixed for previous commit ( Redirecting to edit after creation of graph)

--- a/app/views/graphs/create.js.erb
+++ b/app/views/graphs/create.js.erb
@@ -1,4 +1,4 @@
 addMessagesToDiv($('#global-messages'), '<%= escape_javascript flash_messages %>');
-<%if @errors.empty? %>
-window.location = '<%= edit_graph_path(@graph.id)%>';
+<%if flash.now[:error].blank? %>
+  window.location = '<%= edit_graph_path(@graph.id)%>';
 <%end%>
