Removed if else block for resource type check for showing edit dialog for instances

--- a/app/assets/javascripts/default.js.erb
+++ b/app/assets/javascripts/default.js.erb
@@ -21,15 +21,7 @@ function showConfigurationForm(dialogId, droppedPosition){
 
 function showInstanceEditForm(editElement){
   var instanceOptions = $('#'+editElement).instance("option") ;
-  var dialogId = '' ;
-  switch(instanceOptions.resourceType){
-  case 'EC2':
-    dialogId = 'ec2-configuration';	
-    break;
-  case 'RDS':
-    dialogId = 'rds-configuration';	
-    break;
-  }
+  var dialogId = $('#'+editElement).instance('getConfigurationDialogId') ;
   var dialog = $('#'+dialogId);
   dialog.removeData(['editElement', 'xpos', 'ypos']);
   dialog.data('editElement', editElement);
