--- a/app/views/graphs/_dialogs.html.erb
+++ b/app/views/graphs/_dialogs.html.erb
@@ -75,3 +75,21 @@
   </div>
   <% end %>
 </div>  
+
+<!-- EC resource added -->
+<div id="ec-configuration" class="modal hide fade in" style="display: none; ">
+  <div class="modal-header">
+    <a class="close" data-dismiss="modal">×</a>
+    <h3>EC instance configuration</h3>
+  </div>
+  <div class="modal-body">
+    <div id="ec-config-error-messages"></div>
+    <%= simple_form_for Instance.new, url: '' , html: { id: 'ec-config-frm'} do |f|%>
+      <%= f.input :label, input_html: { id: 'ec_label', class: 'instance_label'} %>
+  </div>
+  <div class="modal-footer">
+    <%= f.button :submit, 'Apply', class: "btn btn-success instance-config-submit" %>
+    <a href="#" class="btn" data-dismiss="modal">Close</a>
+  </div>
+  <% end %>
+</div>
