Renamed dropdowns for screenshot

--- a/app/views/graphs/_project_environment.html.erb
+++ b/app/views/graphs/_project_environment.html.erb
@@ -1,14 +1,14 @@
 <div class = "pull-right">
   <ul class="nav nav-pills">
     <li class="dropdown">
-    <a class="dropdown-toggle" data-toggle="dropdown" href="#">Project    <span class="caret"></span></a>
+    <a class="dropdown-toggle" data-toggle="dropdown" href="#">RailsSandbox    <span class="caret"></span></a>
     <ul class="dropdown-menu">
       <li><a href="">FuturesInc</a></li>
       <li><a href="">Tubify</a></li>
     </ul>
     </li>
     <li class="dropdown">
-    <a class="dropdown-toggle" data-toggle="dropdown" href="#">Environment    <span class="caret"></span></a>
+    <a class="dropdown-toggle" data-toggle="dropdown" href="#">Staging    <span class="caret"></span></a>
     <ul class="dropdown-menu">
       <li><a href="">Edge</a></li>
       <li><a href="">Staging</a></li>
