Connectors added to instances

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -32,6 +32,9 @@ div.graph-draggables-dock {
   max-width: 30px;
 }
 
+._jsPlumb_connector { z-index:4; }
+._jsPlumb_endpoint { z-index:5; }
+
 /*
 .ubuntu-ec2-element {
   background-image:image-url('icons/ubuntu.png');
