Save connections between instances

--- a/app/views/graphs/_edit_toolbar.html.erb
+++ b/app/views/graphs/_edit_toolbar.html.erb
@@ -1,8 +1,7 @@
 <div class="navbar navbar-inner">
   <ul class="nav nav-pills">
     <li><a id="graph-update" data-graph-id="<%=@graph.id%>" href="javascript:void(0)">Save</a></li>
-    <li><a>Export</a></li>
-    <li><a>Import</a></li>
+    <li><a>Provision</a></li>
   </ul> 
   <%= render 'project_environment' %> 
 </div>
