--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,9 +1,20 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<h2>Edit Account</h2>
+
 
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
   <%= devise_error_messages! %>
-<p><%= f.label :name %><br />
-<%= f.text_field :name %></p>
+
+  <div class="well pull-right">
+    <h2>AWS keys</h2>
+    <p><%= f.label :aws_access_key %><br />
+    <%= f.text_field :aws_access_key %></p>
+
+    <div><%= f.label :aws_secret_key %>
+    <%= f.text_field :aws_secret_key%></div>
+  </div>
+
+  <p><%= f.label :name %><br />
+  <%= f.text_field :name %></p>
 
   <div><%= f.label :email %><br />
   <%= f.email_field :email %></div>
