--- a/app/views/graphs/new.html.erb
+++ b/app/views/graphs/new.html.erb
@@ -2,7 +2,7 @@
 <div class="row">
   <%= render 'graph_draggables', resource_types: @resource_types %>
   <%= render 'graph_area' %>
-  <%= render 'dialogs' %>
+  <%= render 'dialogs' , project: @project %>
   <%= render 'instance_templates', resource_types: @resource_types %>
 </div>
 <script type="text/javascript">
