--- a/app/views/home/dashboard.html.erb
+++ b/app/views/home/dashboard.html.erb
@@ -5,6 +5,6 @@
     <%= link_to 'Try it!', new_graph_path , class: "btn btn-primary btn-large" %>
   </p>
   <p>
-    <%= link_to 'All Graphs', graphs_path , class: "btn btn-primary btn-large" %>
+    <%= link_to 'All Environments', graphs_path , class: "btn btn-primary btn-large" %>
   </p>
 </div>
