--- a/app/views/graphs/_dialogs.html.erb
+++ b/app/views/graphs/_dialogs.html.erb
@@ -1,16 +1,16 @@
-<!-- Save Graph  -->
+<!-- Save Environment -->
 <div id="graph-save-modal" class="modal hide fade in" style="display: none; ">  
   <div class="modal-header">  
     <a class="close" data-dismiss="modal">×</a>  
-    <h3>Save Graph</h3>  
+    <h3>Save Environment</h3>
   </div>  
   <div class="modal-body">  
     <div id="graph-save-error-messages"></div>
-    <%= simple_form_for Graph.new, url: '/graphs'  , remote: true, html: { id: 'graph-save-frm'} do |f|%>
+    <%= simple_form_for Graph.new, url: project_graphs_path(project)  , remote: true, html: { id: 'graph-save-frm'} do |f|%>
       <%= f.input :name, input_html: { id: 'graph-name'} %>
   </div>  
   <div class="modal-footer">  
-    <%= f.button :submit, 'Save graph', class: "btn btn-success graph-save-submit" %>
+    <%= f.button :submit, 'Save environment', class: "btn btn-success graph-save-submit" %>
     <a href="#" class="btn" data-dismiss="modal">Close</a>  
   </div>  
     <% end %>
