--- a/app/views/graphs/index.html.erb
+++ b/app/views/graphs/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Listing graphs</h1>
+<h1>Listing environments</h1>
 
 <table class="table table-striped">
   <tr>
@@ -10,12 +10,12 @@
 <% @graphs.each do |graph| %>
   <tr>
     <td><%= graph.name %></td>
-    <td><%= link_to 'Edit', edit_graph_path(graph) %></td>
-    <td><%= link_to 'Destroy', graph, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <td><%= link_to 'Edit', edit_project_graph_path(@project,graph) %></td>
+    <td><%= link_to 'Destroy', project_graph_path(@project,graph), method: :delete, data: { confirm: 'Are you sure?' } %></td>
   </tr>
 <% end %>
 </table>
 
 <br />
 
-<%= link_to 'New Graph', new_graph_path %>
+<%= link_to 'New Environment', new_project_graph_path(@project) %>
