--- a/app/views/graphs/_project_environment.html.erb
+++ b/app/views/graphs/_project_environment.html.erb
@@ -1,19 +1,10 @@
 <div class = "pull-right">
   <ul class="nav nav-pills">
     <li class="dropdown">
-    <a class="dropdown-toggle" data-toggle="dropdown" href="#">RailsSandbox    <span class="caret"></span></a>
-    <ul class="dropdown-menu">
-      <li><a href="">FuturesInc</a></li>
-      <li><a href="">Tubify</a></li>
-    </ul>
+      <a class="dropdown-toggle" data-toggle="dropdown" href="#">Project &nbsp;:&nbsp;<%= @project.name.present? ? @project.name.capitalize : ''%></a>
     </li>
     <li class="dropdown">
-    <a class="dropdown-toggle" data-toggle="dropdown" href="#">Staging    <span class="caret"></span></a>
-    <ul class="dropdown-menu">
-      <li><a href="">Edge</a></li>
-      <li><a href="">Staging</a></li>
-      <li><a href="">Production</a></li>
-    </ul>
+      <a class="dropdown-toggle" data-toggle="dropdown" href="#">Environment &nbsp;:&nbsp;<%= @graph.name.present? ? @graph.name.capitalize : ''%></a>
     </li>
   </ul> 
 </div>
