--- a/app/views/graphs/_project_environment.html.erb
+++ b/app/views/graphs/_project_environment.html.erb
@@ -1,10 +1,10 @@
 <div class = "pull-right">
   <ul class="nav nav-pills">
     <li class="dropdown">
-      <a class="dropdown-toggle" data-toggle="dropdown" href="#">Project &nbsp;:&nbsp;<%= @project.name.present? ? @project.name.capitalize : ''%></a>
+      <a class="dropdown-toggle" data-toggle="dropdown" href="<%= projects_path %>"><%= @project.name.present? ? @project.name : ''%> &nbsp;&nbsp;:</a>
     </li>
-    <li class="dropdown">
-      <a class="dropdown-toggle" data-toggle="dropdown" href="#">Environment &nbsp;:&nbsp;<%= @graph.name.present? ? @graph.name.capitalize : ''%></a>
+    <li class="dropdown" style="margin-left:-12%;">
+      <a class="dropdown-toggle" data-toggle="dropdown" href="<%= project_path(@project) %>"><%= @graph.name.present? ? @graph.name : ''%></a>
     </li>
   </ul> 
 </div>
