--- a/app/views/graphs/edit.html.erb
+++ b/app/views/graphs/edit.html.erb
@@ -19,8 +19,11 @@
     var instanceType = <%= instance.instance_type_id.nil? ? 'null' : instance.instance_type_id %>;
     var configAttributes = '<%= instance.config_attributes.html_safe %>';
     var newInstance = addInstanceCloneToGraph({ left: xpos, top: ypos });
-    newInstance.instance({xpos: xpos, ypos: ypos, label: label, resourceType: resourceType, amiId: amiId, InstanceType:instanceType, instanceId: instanceId,configAttributes:configAttributes});
-    //instances[instanceId] = { instance: newInstance, parents: parents };
+    if(configAttributes != '')
+      newInstance.instance({xpos: xpos, ypos: ypos, label: label, resourceType: resourceType, amiId: amiId, InstanceType:instanceType, instanceId: instanceId,configAttributes:configAttributes});
+    else
+      newInstance.instance({xpos: xpos, ypos: ypos, label: label, resourceType: resourceType, amiId: amiId, InstanceType:instanceType, instanceId: instanceId});    
+      //instances[instanceId] = { instance: newInstance, parents: parents };
   <% end %>
   /*
   //Loads saved connections
