--- a/app/views/graphs/_project_environment.html.erb
+++ b/app/views/graphs/_project_environment.html.erb
@@ -1,10 +1,6 @@
 <div class = "pull-right">
   <ul class="nav nav-pills">
-    <li class="dropdown">
-      <a class="dropdown-toggle" data-toggle="dropdown" href="<%= projects_path %>"><%= @project.name.present? ? @project.name : ''%> &nbsp;&nbsp;:</a>
-    </li>
-    <li class="dropdown" style="margin-left:-12%;">
-      <a class="dropdown-toggle" data-toggle="dropdown" href="<%= project_path(@project) %>"><%= @graph.name.present? ? @graph.name : ''%></a>
-    </li>
+    <li><a id="projects_list" href="<%= projects_path %>"><%= @project.name.present? ? @project.name : ''%> &nbsp;&nbsp;:</a></li>
+    <li><a id="project_details"  href="<%=project_path(@project)%>"><%= @graph.name.present? ? @graph.name : ''%></a></li>
   </ul> 
 </div>
