--- a/app/assets/javascripts/graph.js.erb
+++ b/app/assets/javascripts/graph.js.erb
@@ -19,6 +19,7 @@ $(document).ready(function(){
       type: 'POST',
       dataType: "script",
       contentType: 'application/json',
+      data : $('.graph-area').graphArea("getInstances"),
       complete: function(){
         hideLoading();
       }
